# secure-liquid-pool

./: .gitignore  LIQUID_STAKING_REWARDS_EXPLAINED.md  README.md  USER_FLOW.md  program-working.md
frontend/: README.md  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/info/: page.tsx
frontend/src/app/: providers.tsx
frontend/src/components/: AmmSwap.tsx  Dashboard.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  LiquidityForm.tsx  PoolStats.tsx  StakeForm.tsx  TransactionStatus.tsx  UnstakeForm.tsx  WalletButton.tsx
frontend/src/contexts/: PoolDataContext.tsx
frontend/src/hooks/: useAmm.ts  (+5 more)
mev-simulation/: Cargo.toml  README.md
mev-simulation/localnet/: README.md  package.json  tsconfig.json
mev-simulation/localnet/scripts/: run.sh
mev-simulation/localnet/src/: config.ts  index.ts  types.ts
mev-simulation/localnet/src/analytics/: collector.ts  report.ts
mev-simulation/localnet/src/bots/: normal-trader.ts  protected-trader.ts  sandwich-attacker.ts
mev-simulation/localnet/src/setup/: accounts.ts  deploy.ts  validator.ts
mev-simulation/localnet/src/simulation/: mempool-monitor.ts  orchestrator.ts
mev-simulation/localnet/src/utils/: logger.ts
mev-simulation/scripts/: setup-localnet.sh
mev-simulation/src/: config.rs  lib.rs  main.rs
mev-simulation/src/analytics/: logger.rs  metrics.rs  mod.rs  report.rs
mev-simulation/src/bots/: mod.rs  normal_trader.rs  protected_trader.rs  sandwich_attacker.rs
mev-simulation/src/simulation/: mod.rs  orchestrator.rs  pool_state.rs
mev-simulation/src/utils/: amm_math.rs  hash.rs  mod.rs  wallet.rs
securelp/: Anchor.toml  README.md  package.json
securelp/programs/stake_pool/: Cargo.toml
securelp/programs/stake_pool/src/: errors.rs  lib.rs  state.rs
securelp/scripts/: add-lp-metadata.ts  add-metadata.ts  add-token-metadata.ts  harvest.ts  init-amm.ts  initialize.ts
securelp/tests/: securelp.ts
(+18 files in other folders)
