[package]
name = "stake_pool"
version = "0.1.0"
description = "SecureLiquidPool - Liquid Staking Pool with Real Validator Delegation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stake_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "metadata"] }
mpl-token-metadata = "5.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

